# fragmenter

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/: release-please-config.json
.github/workflows/: build.yaml  lint.yaml  publish.yaml  release-please.yaml  test.yaml
agent_docs/: architecture.md  ingestion.md  testing.md
examples/dev_examples/: main.py
examples/waywise/: .env.example
examples/waywise/data/docs/deepwiki/: RISE-Dependable-Transport-Systems_WayWise.md  RISE-Dependable-Transport-Systems_WayWise_1-overview.md  RISE-Dependable-Transport-Systems_WayWise_1.1-architecture-and-system-design.md  RISE-Dependable-Transport-Systems_WayWise_1.2-getting-started.md  RISE-Dependable-Transport-Systems_WayWise_2-communication-layer.md  RISE-Dependable-Transport-Systems_WayWise_2.1-vehicle-server-(mavsdkvehicleserver).md  RISE-Dependable-Transport-Systems_WayWise_2.2-vehicle-connection-(mavsdkvehicleconnection).md  RISE-Dependable-Transport-Systems_WayWise_2.3-ground-station-(mavsdkstation).md  RISE-Dependable-Transport-Systems_WayWise_2.4-parameter-server.md  RISE-Dependable-Transport-Systems_WayWise_3-autopilot-systems.md  RISE-Dependable-Transport-Systems_WayWise_3.1-waypoint-follower-interface.md  RISE-Dependable-Transport-Systems_WayWise_3.2-pure-pursuit-waypoint-follower.md  RISE-Dependable-Transport-Systems_WayWise_3.3-follow-point-controller.md  RISE-Dependable-Transport-Systems_WayWise_3.4-multi-waypoint-follower.md  RISE-Dependable-Transport-Systems_WayWise_3.5-goto-waypoint-follower.md  RISE-Dependable-Transport-Systems_WayWise_3.6-speed-limit-regions.md  RISE-Dependable-Transport-Systems_WayWise_3.7-emergency-brake-system.md  RISE-Dependable-Transport-Systems_WayWise_4-vehicle-state-management.md  RISE-Dependable-Transport-Systems_WayWise_4.1-state-architecture-and-position-sources.md  RISE-Dependable-Transport-Systems_WayWise_4.2-ground-vehicle-models-(carstate).md  RISE-Dependable-Transport-Systems_WayWise_4.3-articulated-vehicles-(truck-and-trailer).md  RISE-Dependable-Transport-Systems_WayWise_4.4-multicopter-state-(copterstate).md  RISE-Dependable-Transport-Systems_WayWise_5-sensor-integration.md  RISE-Dependable-Transport-Systems_WayWise_5.1-gnss-and-rtk-positioning.md  RISE-Dependable-Transport-Systems_WayWise_5.2-sensor-fusion-algorithm.md  RISE-Dependable-Transport-Systems_WayWise_5.3-camera-and-gimbal-control.md  RISE-Dependable-Transport-Systems_WayWise_5.4-basestation-configuration-(ubloxbasestation).md  RISE-Dependable-Transport-Systems_WayWise_6-user-interfaces.md  RISE-Dependable-Transport-Systems_WayWise_6.1-map-visualization-system.md  RISE-Dependable-Transport-Systems_WayWise_6.2-route-planning-interface.md  RISE-Dependable-Transport-Systems_WayWise_6.3-ground-vehicle-control-ui.md  RISE-Dependable-Transport-Systems_WayWise_6.4-drone-flight-control-ui.md  RISE-Dependable-Transport-Systems_WayWise_6.5-camera-control-ui.md  RISE-Dependable-Transport-Systems_WayWise_6.6-parameter-configuration-ui.md  RISE-Dependable-Transport-Systems_WayWise_6.7-serial-port-configuration.md  RISE-Dependable-Transport-Systems_WayWise_7-route-planning-and-utilities.md  (+4 more)
examples/waywise/evaluation/: README.md  analyze_structure.py  dataset.json  evaluate_rag.py
examples/waywise/experiments/config/: 001.json  002.json
examples/waywise/experiments/scripts/: method.sh  rollback.sh  steady-state-hypothesis.sh
examples/waywise/prompts/: generate-waywise-attack-cpp.md  generate-waywise-attack-with-example.md  simple-questions.md
examples/waywise/sce_db/patches/: 001-fix-ver.patch  001-fix.patch  001.patch
src/fragmenter/: __init__.py  cli.py  config.py
src/fragmenter/evaluation/: data_loader.py  evaluator.py  index_analysis.py
src/fragmenter/rag/: __init__.py  extractors.py  inference.py  ingestion.py  metadata.py  parsers.py  pipeline.py  utils.py  vector_stores.py
src/fragmenter/scraping/: scraper.py
src/fragmenter/tools/: README.md  __init__.py  collect_extensions.py  init.py  inspect_index.py  query_index.py  rebuild_index.py  scrape.py
src/fragmenter/utils/: logging.py
tests/: __init__.py  conftest.py  test_extractors.py  test_integration.py  test_metadata.py  test_parsers.py  test_pipeline.py  test_vector_stores.py
(+13 files in other folders)
